feat: update dependencies and add Angular Material
- Added @angular/cdk and @angular/material dependencies to package.json.
- Updated app.config.ts to include provideAnimationsAsync for better animation handling.
- Enhanced index.html with Google Fonts and Material Icons for improved typography and icon usage.
- Updated global styles in styles.css to set height and margin for body, and applied Roboto font.
- Created environment.example.ts for environment configuration with API key and base URL.

--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -84,6 +85,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -91,5 +93,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "2b6babcf-acef-4fc2-bdcd-a8e6b46d7273"
   }
 }
