--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "rxjs": "~7.8.0",
+    "tmdbv3": "^0.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.15",
+    "@angular-devkit/build-angular": "^19.2.9",
     "@angular/cli": "^17.3.15",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
