chore: update dependencies and add linting script
- Updated Angular dependencies to version 19.x
- Changed 'tmdbv3' to 'tmdb-ts' in dependencies
- Added webpack and related packages for bundling
- Introduced linting script using ng lint
- Created a new service file for TMDB API integration
- Cleaned up app.component.html by removing placeholder content

--- a/angular.json
+++ b/angular.json
@@ -90,11 +90,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "2b6babcf-acef-4fc2-bdcd-a8e6b46d7273"
+    "analytics": "2b6babcf-acef-4fc2-bdcd-a8e6b46d7273",
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
