--- a/package.json
+++ b/package.json
@@ -6,36 +6,44 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.13",
-    "@angular/cdk": "^17.3.10",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/material": "^17.3.10",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/router": "^18.2.13",
+    "@angular/animations": "^19.2.8",
+    "@angular/cdk": "^19.2.11",
+    "@angular/common": "^19.2.8",
+    "@angular/compiler": "^19.2.8",
+    "@angular/core": "^19.2.8",
+    "@angular/forms": "^19.2.8",
+    "@angular/material": "^19.2.11",
+    "@angular/platform-browser": "^19.2.8",
+    "@angular/platform-browser-dynamic": "^19.2.8",
+    "@angular/router": "^19.2.8",
+    "@egjs/hammerjs": "^2.0.17",
     "rxjs": "~7.8.0",
-    "tmdbv3": "^0.1.2",
+    "tmdb-ts": "^2.0.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "webpack": "^5.99.7",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.9",
-    "@angular/cli": "^18.2.19",
-    "@angular/compiler-cli": "^18.2.13",
+    "@angular/cli": "^19.2.9",
+    "@angular/compiler-cli": "^19.2.8",
     "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
+    "angular-eslint": "19.3.0",
+    "eslint": "^9.23.0",
+    "jasmine-core": "^5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.31.0"
   }
 }
