--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
     "@angular/platform-browser-dynamic": "^19.2.8",
     "@angular/router": "^19.2.8",
     "@egjs/hammerjs": "^2.0.17",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
+    "@tailwindcss/postcss": "^4.1.4",
+    "bootstrap": "^5.3.5",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.6",
+    "tailwindcss": "^4.1.4",
     "tmdb-ts": "^2.0.1",
     "tslib": "^2.3.0",
     "webpack": "^5.99.7",
@@ -34,6 +41,7 @@
     "@angular-devkit/build-angular": "^19.2.9",
     "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.8",
+    "@angular/localize": "^19.2.8",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.3.0",
     "eslint": "^9.23.0",
