feat: integrate PayPal SDK and implement checkout functionality

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@egjs/hammerjs": "^2.0.17",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@paypal/paypal-js": "^8.2.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/postcss": "^4.1.4",
     "bootstrap": "^5.3.5",
+    "ngx-paypal": "^11.0.0",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
