--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,6 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -87,10 +86,9 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
-              },
-              "src/favicon.ico",
-              "src/assets"
+                "input": "public",
+                "output": "test"
+              }
             ],
             "styles": [
               "src/styles.css",
