--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/postcss": "^4.1.4",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.12.1",
     "ngx-paypal": "^11.0.0",
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.3",
-    "bootstrap-icons": "^1.12.1",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4",
     "tmdb-ts": "^2.0.1",
     "tslib": "^2.3.0",
