--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,7 @@
             "outputPath": "dist/clacket",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js",
-            "@angular/localize/init"],
+            "polyfills": ["zone.js", "@angular/localize/init"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -29,6 +28,8 @@
             ],
             "styles": [
               "node_modules/ngx-spinner/animations/line-scale-party.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
@@ -84,8 +85,11 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": ["zone.js", "zone.js/testing",
-            "@angular/localize/init"],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing",
+              "@angular/localize/init"
+            ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -100,10 +104,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
@@ -111,9 +112,6 @@
   },
   "cli": {
     "analytics": "2b6babcf-acef-4fc2-bdcd-a8e6b46d7273",
-    "schematicCollections": [
-      "angular-eslint"
-    ]
-
+    "schematicCollections": ["angular-eslint"]
   }
 }
